# binance-futures-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/strategies/: adaptive_trend_guarded.json  ema30_60_trend_strict.json  ema7_20_adx_balanced.json  ema7_20_trend_strict.json  mean_reversion_range.json  trend_aggressive_breakout.json  trend_balanced_multi.json  trend_conservative_multi.json
src/futures_bot/: __init__.py  api.py  backtest.py  config.py  engine.py  execution.py  execution_live.py  execution_paper.py  main.py  market_data.py  models.py  storage.py
src/futures_bot/dashboard/static/: app.js  index.html  style.css
src/futures_bot/strategies/: base.py  builtins.py  engine.py
tests/: test_trading_bot.py
